# synthetic-git-history

./: .gitignore  README.md  config.example.json  config.example.toml  go.mod  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmd/synthgit/: main.go  main_test.go
internal/config/: config.go  config_test.go  example.go
internal/gitops/: gitops.go  gitops_test.go
internal/schedule/: schedule.go  schedule_test.go
src/synthgit/: __init__.py  cli.py  config.py  generator.py  git_ops.py
tests/: test_config.py  test_generator.py  test_git_ops.py
