[project]
name = "synthetic-git-history"
version = "0.1.0"
description = "Configurable synthetic Git commit history generator for testing GitHub integrations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Synthetic Git History Maintainers" }]
dependencies = []

[project.scripts]
synthgit = "synthgit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

